--- a/src/SConscript
+++ b/src/SConscript
@@ -78,6 +78,7 @@ libwesnoth_sources = Split("""
     cursor.cpp
     display.cpp
     events.cpp
+    filesystem_sdl.cpp
     format_time_summary.cpp
     generic_event.cpp
     hotkey/hotkey_item.cpp
